--- a/TS with jQuery/package.json
+++ b/TS with jQuery/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jquery": "^3.3.29"
+    "@types/jquery": "^3.3.29",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^2.13.6"
   }
 }
